--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "monkey_interpreter"
-version = "0.1.0"
-authors = ["Wessel van Lit <wvanlit.business@gmail.com>"]
+version = "1.0.0"
+authors = ["Wessel van Lit <wessel@litdev.nl>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
